--- a/Hex/Hex.csproj
+++ b/Hex/Hex.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include = "../Extended/Extended.csproj" />
     <ProjectReference Include = "../Forms/Forms.csproj" />
+    <ProjectReference Include = "../MonoGui/MonoGui.csproj" />
   </ItemGroup>
 </Project>
